# agentic-trading-research

./: .env.example  .gitignore  Makefile  README.md  SECURITY.md  pyproject.toml  research_config.example.json
agent_research/: WORKFLOW.md  __init__.py  _llm.py  approved_portfolio_backtest.py  code_runtime.py  config_utils.py  funding_grid_search.py  funding_symbol_selection.py  graph.py  hypotheses.md  logging_config.py  memory.py  requirements.txt  runner.py  sandbox.py  schemas_llm.py  state.py
agent_research/agents/: code_executor.py  coder.py  executor.py  reporter.py  researcher.py  reviewer.py  router.py  strategist.py
agent_research/prompts/: coder.md  researcher.md  reviewer.md  strategist.md
backtest/: __init__.py  engine.py  param_search.py
docs/: BacktestExecutionSpec.md  DATA.md  PUBLISHING.md
